Fri Apr 10 15:12:37 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* renamed complex_*.c and halfcomplex_*.c to c_*.c and hc_*.c to
 	avoid linker complaints about long filenames on some platforms

Sun Mar 29 15:56:34 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* To be compatible with other architectures use size_t everywhere
 	instead of unsigned int

Sat Mar 21 17:28:26 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* factorize.c (gsl_fft_factorize): Stopped returning the sum of
 	factors in the status variable. The user can compute it if
 	necessary.

1998-01-27  Mark Galassi  <rosalia@cygnus.com>

	* Makefile.am: fixed a typo: removed trailing \ at the end of this file.
	