@@ -107,9 +107,9 @@ void check_complex (size_t n)
   gsl_complex *complex_data, *complex_tmp;
   gsl_complex *fft_complex_data, *fft_complex_tmp;
 
-  gsl_fft_complex_wavetable complex_wavetable;
-  gsl_fft_real_wavetable real_wavetable;
-  gsl_fft_halfcomplex_wavetable halfcomplex_wavetable;
+  gsl_fft_complex_wavetable * cw ;
+  gsl_fft_real_wavetable * rw ;
+  gsl_fft_halfcomplex_wavetable * hcw ;
 
   real_data = malloc (n * sizeof (double));
   complex_data = malloc (n * sizeof (gsl_complex));
@@ -119,16 +119,16 @@ void check_complex (size_t n)
 
   gsl_set_error_handler (NULL);	/* abort on any errors */
 
-  status = gsl_fft_complex_wavetable_alloc (n, &complex_wavetable);
-  gsl_test (status, "gsl_fft_complex_wavetable_alloc, n = %d", n);
+  cw = gsl_fft_complex_wavetable_alloc (n);
+  gsl_test (cw == 0, "gsl_fft_complex_wavetable_alloc, n = %d", n);
   
-  status = gsl_fft_complex_init (n, &complex_wavetable);
+  status = gsl_fft_complex_init (n, cw);
   gsl_test (status, "gsl_fft_complex_wavetable_init, n = %d", n);
   
   /* the wavetable generation is also performed by gsl_fft_complex_init
      but test it here too */
   
-  status = gsl_fft_complex_generate_wavetable (n, &complex_wavetable);
+  status = gsl_fft_complex_generate_wavetable (n, cw);
   gsl_test (status, "gsl_fft_complex_generate_wavetable, n = %d", n);
   
   complex_data = malloc (n * sizeof (gsl_complex));
@@ -141,7 +141,7 @@ void check_complex (size_t n)
   /* mixed radix fft */
   gsl_fft_signal_complex_noise (n, complex_data, fft_complex_data);
   memcpy (complex_tmp, complex_data, n * sizeof (gsl_complex));
-  gsl_fft_complex_forward (complex_data, n, &complex_wavetable);
+  gsl_fft_complex_forward (complex_data, n, cw);
   memcpy (fft_complex_tmp, complex_data, n * sizeof (gsl_complex));
   status = compare_complex_results ("dft", fft_complex_data,
 				    "fft of noise", complex_data,
@@ -149,7 +149,7 @@ void check_complex (size_t n)
   gsl_test (status, "gsl_fft_complex_forward with signal_noise, n = %d", n);
   
   /* compute the inverse fft */
-  status = gsl_fft_complex_inverse (complex_data, n, &complex_wavetable);
+  status = gsl_fft_complex_inverse (complex_data, n, cw);
   status = compare_complex_results ("orig", complex_tmp,
 				    "fft inverse", complex_data,
 				    n, 1e6);
@@ -157,7 +157,7 @@ void check_complex (size_t n)
   
   /* compute the backward fft */
 
-  status = gsl_fft_complex_backward (fft_complex_tmp, n, &complex_wavetable);
+  status = gsl_fft_complex_backward (fft_complex_tmp, n, cw);
 
   for (i = 0; i < n; i++)
     {
@@ -171,13 +171,13 @@ void check_complex (size_t n)
   
   /* mixed radix real fft */
   
-  status = gsl_fft_real_wavetable_alloc (n, &real_wavetable);
-  gsl_test (status, "gsl_fft_real_wavetable_alloc, n = %d", n);
+  rw = gsl_fft_real_wavetable_alloc (n);
+  gsl_test (rw == 0, "gsl_fft_real_wavetable_alloc, n = %d", n);
   
-  status = gsl_fft_real_init (n, &real_wavetable);
+  status = gsl_fft_real_init (n, rw);
   gsl_test (status, "gsl_fft_real_wavetable_init, n = %d", n);
   
-  status = gsl_fft_real_generate_wavetable (n, &real_wavetable);
+  status = gsl_fft_real_generate_wavetable (n, rw);
   gsl_test (status, "gsl_fft_real_generate_wavetable, n = %d", n);
   
   real_data = malloc (n * sizeof (double));
@@ -193,7 +193,7 @@ void check_complex (size_t n)
       real_data[i] = complex_data[i].real;
     }
   
-  gsl_fft_real (real_data, n, &real_wavetable);
+  gsl_fft_real (real_data, n, rw);
   gsl_fft_halfcomplex_unpack (real_data, complex_data, n);
   
   status = compare_complex_results ("dft", fft_complex_data,
@@ -204,17 +204,17 @@ void check_complex (size_t n)
   /* compute the inverse fft */
   
 
-  status = gsl_fft_halfcomplex_wavetable_alloc (n, &halfcomplex_wavetable);
-  gsl_test (status, "gsl_fft_halfcomplex_wavetable_alloc, n = %d", n);
+  hcw = gsl_fft_halfcomplex_wavetable_alloc (n);
+  gsl_test (hcw == 0, "gsl_fft_halfcomplex_wavetable_alloc, n = %d", n);
   
-  status = gsl_fft_halfcomplex_init (n, &halfcomplex_wavetable);
+  status = gsl_fft_halfcomplex_init (n, hcw);
   gsl_test (status, "gsl_fft_halfcomplex_wavetable_init, n = %d", n);
   
   status = gsl_fft_halfcomplex_generate_wavetable (n,
-						   &halfcomplex_wavetable);
+						   hcw);
   gsl_test (status, "gsl_fft_halfcomplex_generate_wavetable, n = %d", n);
   
-  status = gsl_fft_halfcomplex (real_data, n, &halfcomplex_wavetable);
+  status = gsl_fft_halfcomplex (real_data, n, hcw);
   
   for (i = 0; i < n; i++)
     {
@@ -231,14 +231,14 @@ void check_complex (size_t n)
   /* pulse */
   gsl_fft_signal_complex_pulse (1, n, 1.0, 0.0, complex_data,
 				     fft_complex_data);
-  gsl_fft_complex_forward (complex_data, n, &complex_wavetable);
+  gsl_fft_complex_forward (complex_data, n, cw);
   status = compare_complex_results ("analytic", fft_complex_data,
 				    "fft of pulse", complex_data, n, 1e6);
   gsl_test (status, "gsl_fft_complex_forward with signal_pulse, n = %d", n);
   
   gsl_fft_signal_complex_constant (n, 1.0, 0.0, complex_data,
 					fft_complex_data);
-  gsl_fft_complex_forward (complex_data, n, &complex_wavetable);
+  gsl_fft_complex_forward (complex_data, n, cw);
   status = compare_complex_results ("analytic", fft_complex_data,
 				    "fft of constant", complex_data,
 				    n, 1e6);
@@ -249,14 +249,14 @@ void check_complex (size_t n)
     {
       gsl_fft_signal_complex_exp ((int)i, n, 1.0, 0.0, complex_data,
 				       fft_complex_data);
-      gsl_fft_complex_forward (complex_data, n, &complex_wavetable);
+      gsl_fft_complex_forward (complex_data, n, cw);
       status |= compare_complex_results ("analytic", fft_complex_data,
 					 "fft of exp", complex_data,
 					 n, 1e6);
     };
   gsl_test (status, "gsl_fft_complex_forward with signal_exp, n = %d", n);
   
-  status = gsl_fft_complex_wavetable_free (&complex_wavetable);
+  gsl_fft_complex_wavetable_free (cw);
   gsl_test (status, "gsl_fft_complex_wavetable_free, n = %d", n);
   
   /* check for memory leaks here if mstats available */
